css/2026.css
/* 2026 css */
.ctaButton26,
.ctaButton26:visited {
    transition: 0.2s;
    background-color: rgba(87,166,123,1.0);
    color:rgba(255,255,255,1.0) !important;
    display: inline-block;
    margin-top: 1em;
    text-align: center;
    border: 2px solid rgba(87,166,123,1.0);
    padding:  12px 2vw 14px 2vw;
    border-radius: 10px;
    text-decoration: none;
    font-size: 1.1em;
    font-weight: 400;
    margin-bottom:5px;
    position: relative;
}
@media screen and (max-width: 1100px) {
    .ctaButton26,
    .ctaButton26:visited {
        display: block;
    }
}
.ctaButton26:hover,
.ctaButton26:visited:hover {
    background-color: rgba(255,255,255,0.0);
    color: rgba(87,166,123,1.0) !important;
}

.ctaButton26.mimimal {
    padding-right: 2.5vw;
    padding-left: 0.5vw;
    text-align: left;
    background-color: rgba(255,255,255,0.0);
    border: 2px solid rgba(87,166,123,0);
    border-radius: 0;
}
.ctaButton26.mimimal:hover {
    border-bottom: 2px solid rgba(87,166,123,1.0);
}
.ctaButton26.mimimal::after {
    font-family: 'icomoon';
    content: "\e9ad";
    position: absolute;
    right: 1vw;
    font-size: 0.9em;
    margin-top: 0.1em;
    transition: 0.2s;
    color: rgba(87,166,123,1.0);
}
.ctaButton26.mimimal:hover::after {
    right: 0.5vw;
}
.ctaButton26.reversed,
.ctaButton26.reversed:visited {
    color: rgba(87,166,123,1.0);
}


.relative {
    position: relative;
}

.gradientBlackFromBottom {
    background: linear-gradient(to top, rgba(0,0,0,0.8), rgba(0,0,0,0.0));
}
.gradientBlackFromTop {
    background: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0.0));
}
.gradientGreyFromTop {
    background: linear-gradient(to bottom, rgba(0,0,0,0.10), rgba(0,0,0,0.0));
}
.gradientGreyFromTop2 {
    background: linear-gradient(to bottom, rgba(0,0,0,0.10) 5%, rgba(0,0,0,0.0) 95%);
}
.gradientBlackFromLeft {
    background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.0));
}
.gradientBlackFromTopLeft {
    background: linear-gradient(to bottom right, rgba(0,0,0,0.8), rgba(0,0,0,0.0));
}
.gradientBlackFromBottomLeft {
    background: linear-gradient(to top right, rgba(0,0,0,0.8), rgba(0,0,0,0.0));
}
.gradientBlackFromRight {
    background: linear-gradient(to left, rgba(0,0,0,0.8), rgba(0,0,0,0.0));
}
.gradientBlackFromTopRight {
    background: linear-gradient(to bottom left, rgba(0,0,0,0.8), rgba(0,0,0,0.0));
}
.gradientBlackBottomRight {
    background: linear-gradient(to top left, rgba(0,0,0,0.8), rgba(0,0,0,0.0));
}


/* new banners */
.banner {
    background-color: black;
}
@media screen and (min-width: 1100px) {
    .banner {
        background-color: white;
    }
}
.bannerDetail {
    color: white;
}
.bannerLinkImage {
    display: flex; 
    align-items: center;
    justify-content: center;
    width: 100%; 
    height: 100%;
}
.bannerLinkImage > div > img {
    width: auto;
    height: 55vh;
}




/* width control */
.heroBanner {
    width:100vw;
}

@media screen and (max-width: 750px) {
    .subHeroBanner {
        width:100vw;
    }
}

@media screen and (min-width: 750px) and (max-width: 1100px) {
    .subHeroBanner {
        width:100vw;
    }
}
@media screen and (min-width: 1100px) {
    .subHeroBanner {
        width:50vw;
    }
}

@media screen and (max-width: 750px) {
    .tileBanner {
        width:100vw;
    }
}
@media screen and (min-width: 750px) and (max-width: 1100px) {
    .tileBanner {
        width:50vw;
    }
}
@media screen and (min-width: 1100px) {
    .tileBanner {
        width:25vw;
    }
}



@media screen and (max-width: 750px) {
    .bannerContent {
        padding: 0;
    }
}
@media screen and (min-width: 750px) and (max-width: 1100px) {
    .bannerContent {
        padding-left: 5vw; 
        padding-right: 5vw;
    }
    .subHeroBanner .bannerContent {
        padding-left: 5vw; 
        padding-right: 5vw;
    }
    .tileBanner .bannerContent {
        padding-left: 5vw; 
        padding-right: 5vw;
    }
}
@media screen and (min-width: 1100px) {
    .bannerContent {
        padding-left: 8vw; 
        padding-right: 8vw;
    }
    .subHeroBanner .bannerContent {
        padding-left: 5vw; 
        padding-right: 5vw;
    }
    .tileBanner .bannerContent {
        padding-left: 2vw; 
        padding-right: 2vw;
    }
}
.bannerContent.noPadForce {
    padding-left: 0; 
    padding-right: 0;
}


.bannerInnerContent {
    display: flex; 
    justify-content: center; 
    align-items: center; 
    width: 100%;  
}
@media screen and (max-width: 750px) {
    .bannerInnerContent {
        height: 75vh;
    }
    .tileBanner .bannerInnerContent {
        height: 35vh;
    }
}
@media screen and (min-width: 750px) and (max-width: 1100px) {
    .bannerInnerContent {
        height: 75vh;
    }
    .tileBanner .bannerInnerContent {
        height: 45vw;
    }
}
@media screen and (min-width: 1100px) {
    .bannerInnerContent {
        height: 80vh;
    }
    .tileBanner .bannerInnerContent {
        height: 25vw;
    }
}





.bannerDetail {
    background-size: contain; 
    background-repeat: no-repeat; 
    background-position: center; 
    width: 100%; 
    height: 100%; 
}

.bannerDetail.bannerDetailInset {
    padding-top: 2vw;
}
@media screen and (max-width: 1100px) {
    .bannerDetail.bannerDetailInset {
        padding-top: 16vw;
        padding-left: 10vw;
        padding-right: 10vw;
    }
}
.textBanner .bannerDetail {
    width: auto; 
    height: auto; 
    padding-left: 10vw;
    padding-right: 10vw;
    padding-top: 16vw;
    align-self: flex-start;
}


@media screen and (min-width: 1100px) {
    .textBanner .bannerDetail {
        padding-left: 8vw;
        padding-right: 30vw;
        padding-top: 15vh;
    }
    body.content2026 .bannerTile {    
        background-image: url(/images/tile-white.svg);
        background-size: 25px auto;
        background-position: 0 99%;
    }
}
/* ... */

